...
    <string name="gesture_name_swipe_right_two">Swipe right using two fingers</string>
    <string name="gesture_name_swipe_right_three">Swipe right using three fingers</string>
    <string name="gesture_name_swipe_up_two">Swipe up using two fingers</string>
    <string name="gesture_name_swipe_up_three">Swipe up using three fingers</string>
    <string name="gestures_pointers_two">Using two fingers</string>
    <string name="gestures_pointers_three">Using three fingers</string>
    <string name="get_help">Get help</string>
    <string name="help">Help</string>
    <string name="hide_password">Hide password</string>
    <string name="high_accuracy_mode_channel_name">High accuracy location</string>
    <string name="high_accuracy_mode_notification_title">High accuracy (GPS) mode enabled</string>
    <string name="hold_to_reorder">Hold to reorder</string>
    <string name="icon">Icon</string>
...
    <string name="manage_ssids_warning">Make sure to set up your home network correctly. Adding public Wi-Fi networks or using multiple ethernet/VPN connections may unintentionally expose information about or access to your app or server.</string>
    <string name="manage_tiles_summary">Set up and manage quick settings tiles here. They will not function until you set them up here.</string>
    <string name="manage_tiles">Manage tiles</string>
    <string name="manage_wear_device">Manage device %1$s</string>
    <string name="manage_widgets_summary">Edit your widgets. Adding/deleting can only be done from the home screen.</string>
    <string name="manage_widgets">Manage widgets</string>
    <string name="manual_setup">Enter address manually</string>
    <string name="manual_title">What is your Apporo aiot address?</string>
    <string name="matter_commissioning_unavailable">Matter is currently unavailable</string>
    <string name="matter_shared_title">Add Matter device</string>
    <string name="matter_shared_status_not_registered">Please connect to your Apporo aiot server before adding a Matter device.</string>
    <string name="matter_shared_status_select_server">Which server would you like to use?</string>
    <string name="matter_shared_status_not_supported">To add a Matter device, please update your Apporo aiot server and add Matter first.</string>
...
    <string name="mute_unmute">Mute/Unmute</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="areas">Areas</string>
    <string name="more_entities">More entities</string>
    <string name="need_help">Need help?</string>
    <string name="navigate_up">Navigate up</string>
    <string name="nfc_btn_create_duplicate">Create a Duplicate</string>
    <string name="nfc_btn_fire_event">Fire Event</string>
    <string name="nfc_btn_read_tag">Read Tag</string>
    <string name="nfc_btn_share">Share</string>
    <string name="nfc_btn_write_tag">Write Tag</string>
    <string name="nfc_event_fired_fail">Firing event failed, please try again</string>
...
    <string name="connection_security_most_secure">Most secure: Allow this app to know when you\'re home</string>
    <string name="connection_security_less_secure">Less secure: Do not allow this app to know when you\'re home</string>
    <string name="home_assistant_branding_icon_content_description">Apporo aiot logo</string>
    <string name="loading_content_description">Loading</string>
    <string name="searching_home_network">Searching on home network</string>
    <string name="server_discovery_no_server_info">Check that your Apporo aiot is powered on and you\'re connected to the same network. You can enter the address manually if you know it.</string>
    <string name="server_discovery_connect">Connect</string>
    <string name="welcome_home_assistant_title">Apporo aiot app</string>
    <string name="welcome_details">Access your Apporo aiot server on the go.\n\nApporo aiot puts privacy and security first and runs locally in your home.</string>
    <string name="welcome_connect_to_ha">Connect to my Apporo aiot</string>
    <string name="welcome_learn_more">Learn more</string>
    <string name="name_your_device_title">How would you like to name this device?</string>
    <string name="name_your_device_content">This is used to identify your device in your Apporo aiot.</string>
    <string name="name_your_device_save">Save</string>
    <string name="manual_server_title">What is your Apporo aiot address?</string>
    <string name="manual_server_connect">Connect</string>
    <string name="manual_server_wrong_url">Invalid URL</string>
    <string name="connection_screen_malformed_url">Verify that your Apporo aiot address is correct</string>
...
